Closed
Bug 230103
Opened 21 years ago
Closed 21 years ago
Looper must be locked in NS_METHOD nsWindow::CaptureMouse() method
Categories
(Core Graveyard :: GFX: BeOS, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: sergei_d, Assigned: sergei_d)
Details
(Keywords: crash)
Attachments
(1 file)
|
695 bytes,
patch
|
Biesinger
:
review+
|
Details | Diff | Splinter Review |
Currently it isn't.
It maylead to crashes like:
The looper must be locked
_debugger:
_debugger:
+0007 ec084853: * c3 retn
mozilla-bin:sc
frame retaddr
fd00147c ec169e20 BLooper::check_lock(void) + 00000044
fd001494 ec21dd27 BView::SetEventMask(unsigned long, unsigned long) + 0000004b
fd0014ac ed650e04 nsWindow::CaptureMouse(int) + 0000002c
fd0014c4 ecfc4c59 nsResizerFrame::HandleEvent(nsIPresContext *, nsGUIEvent *,
nsEventStatus *) + 000000d9
Preparing simple patch
| Assignee | ||
Updated•21 years ago
|
Assignee: arougthopher → sergei_d
| Assignee | ||
Comment 1•21 years ago
|
||
Adding Lock/UnlockLooper() to CaptureMouse method
| Assignee | ||
Comment 2•21 years ago
|
||
Comment on attachment 138414 [details] [diff] [review]
Patch (diff -up)
review request
Attachment #138414 -
Flags: review?(cbiesinger)
Updated•21 years ago
|
Attachment #138414 -
Flags: review?(cbiesinger) → review+
Comment 3•21 years ago
|
||
Checking in nsWindow.cpp;
/cvsroot/mozilla/widget/src/beos/nsWindow.cpp,v <-- nsWindow.cpp
new revision: 1.71; previous revision: 1.70
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•