bug 230103 patch by sergei_d@fi.tartu.ee (Sergei Dolgov) r=biesi Looper must be locked in nsWindow::CaptureMouse() method